# Zwei-Engine

./: .gitignore  CMakeLists.txt  Readme.md
shader/basic/: basic.frag  basic.vert  compile.bat
shader/light/: compile.bat  light.frag  light.vert  lightfrag.spv  lightvert.spv
shader/texture/: compile.bat
shader/triangle/: compile.bat  triangle.vert
shader/uniform/: compile.bat  uniform.vert  uniformvert.spv
src/db/: CMakeLists.txt
src/db/include/element/: element.h  elementcategory.h  elementid.h  elementmanager.h  reflect.h
src/db/include/geometry/basicshape/: cuboid.h
src/db/include/graphic/: graphicelement.h
src/db/include/operator/: operatorhelper.h
src/db/include/scene/: scene.h
src/db/src/element/: element.cpp  elementid.cpp  elementmanager.cpp
src/db/src/geometry/basicshape/: cuboid.cpp
src/db/src/graphic/: graphicelement.cpp
src/db/src/operator/: operatorhelper.cpp
src/db/src/scene/: scene.cpp
src/foundation/: CMakeLists.txt
src/foundation/include/event/: zwevent.h
src/foundation/include/math/: zwoperationutils.h
src/foundation/include/option/: zwoption.h
src/foundation/src/event/: zwevent.cpp
src/foundation/src/math/: zwoperationutils.cpp
src/foundation/src/option/: zwoption.cpp
src/main/: CMakeLists.txt  main.cpp
src/renderdata/: CMakeLists.txt
src/renderdata/include/camera/: zwcamera.h
src/renderdata/include/converter/: meshconverter.h  zwvulkantype.h
src/renderdata/include/light/: zwlight.h
src/renderdata/include/renderdata/: zwtexture.h  zwtrans.h  zwuniform.h  zwvertex.h
src/renderdata/src/: zwuniform.cpp  zwvertex.cpp
src/renderdata/src/camera/: zwcamera.cpp
src/renderdata/src/converter/: meshconverter.cpp
src/renderdata/src/light/: zwlight.cpp
src/renderdata/src/renderdata/: zwtexture.cpp  zwtrans.cpp  zwuniform.cpp  zwvertex.cpp
src/vulkan/: CMakeLists.txt
src/vulkan/include/renderobject/: zwrenderobject.h  zwrenderobjectmanager.h  zwtoolid.h
src/vulkan/include/vulkan/: vulkanconst.h  zwcommandbuffer.h  zwcommandbuffers.h  zwcommandmanager.h  zwcommandpool.h  zwdepthresources.h  zwdescriptor.h  zwdescriptorpool.h  zwdescriptorsetlayout.h  zwdescriptorsets.h  zwframebuffers.h  zwgraphicpipeline.h  zwimageview.h  zwindexbuffer.h  zwinstance.h  zwlogicaldevice.h  zwphysicaldevice.h  zwqueuefamilyindices.h  zwrender.h  zwrenderpass.h  zwrenderutils.h  zwshader.h  zwsurface.h  zwswapchain.h  zwswapchainsupportdetails.h  zwsynchronization.h  zwtexturemanager.h  zwuniformbuffers.h  zwvalidation.h  zwvertexbuffer.h  zwvulkanoption.h
src/vulkan/src/: zwcommandbuffer.cpp  zwcommandbuffers.cpp  zwcommandmanager.cpp  zwcommandpool.cpp  zwdepthresources.cpp  zwdescriptor.cpp  zwdescriptorpool.cpp  zwdescriptorsetlayout.cpp  zwdescriptorsets.cpp  zwframebuffers.cpp  zwgraphicpipeline.cpp  zwimageview.cpp  zwindexbuffer.cpp  zwinstance.cpp  zwlogicaldevice.cpp  zwphysicaldevice.cpp  zwqueuefamilyindices.cpp  zwrender.cpp  zwrenderpass.cpp  zwrenderutils.cpp  zwshader.cpp  zwsurface.cpp  zwswapchain.cpp  zwswapchainsupportdetails.cpp  zwsynchronization.cpp  zwtexturemanager.cpp  zwuniformbuffers.cpp  zwvalidation.cpp  zwvertexbuffer.cpp  zwvulkanoption.cpp
src/vulkan/src/renderobject/: zwrenderobject.cpp  zwrenderobjectmanager.cpp  zwtoolid.cpp
src/vulkan/src/vulkan/: zwdepthresources.cpp  zwdescriptor.cpp  zwgraphicpipeline.cpp  zwlogicaldevice.cpp  zwrender.cpp  zwrenderutils.cpp  zwshader.cpp  zwswapchain.cpp  zwvalidation.cpp
src/window/: CMakeLists.txt
src/window/include/const/: windowconst.h
src/window/include/time/: timer.h
src/window/include/ui/: propertydockwidget.h  resourcebrowserdockwidget.h  scenetreedockwidget.h  zwdockwidget.h  zwmenu.h  zwtoolbar.h
src/window/include/window/: glfwcallback.h  zwapp.h  zwmainwindow.h  zwwindow.h  zwwindowcontainer.h
src/window/include/windowevent/: cameramoveevent.h  camerarotateevent.h  camerazoomevent.h
src/window/qresource/: style.qss
src/window/src/: zwapp.cpp  zwwindow.cpp
src/window/src/time/: timer.cpp
src/window/src/ui/: propertydockwidget.cpp  resourcebrowserdockwidget.cpp  scenetreedockwidget.cpp  zwdockwidget.cpp  zwmenu.cpp  zwtoolbar.cpp
src/window/src/window/: glfwcallback.cpp  zwapp.cpp  zwmainwindow.cpp  zwwindow.cpp  zwwindowcontainer.cpp
src/window/src/windowevent/: cameramoveevent.cpp  camerarotateevent.cpp  camerazoomevent.cpp
